adding Linter, Travis file and testing tools Reference #2 Reference #3

--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/haithhawk/mashrou_cheetah/issues"
   },
-  "homepage": "https://github.com/haithhawk/mashrou_cheetah#readme"
+  "homepage": "https://github.com/haithhawk/mashrou_cheetah#readme",
+  "devDependencies": {
+    "eslint": "^4.12.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "shot": "^4.0.4",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.8.0"
+  }
 }
