Adding tests for router
Relates #23

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "mashrou_cheetah",
   "version": "1.0.0",
-  "description": "## Build from scratch a front and back-end system that utilises Google Maps geolocation (on-click event) to retrieve news and other data relevant to location",
+  "description":
+    "## Build from scratch a front and back-end system that utilises Google Maps geolocation (on-click event) to retrieve news and other data relevant to location",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "tape ./tests/test.js | tap-spec"
   },
   "repository": {
