--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "^4.12.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "shot": "^4.0.4",
+    "shot": "4.0.4",
     "tap-spec": "^4.1.1",
     "tape": "^4.8.0"
   },
