--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "eslint-plugin-import": "^2.8.0",
     "shot": "^3.4.0",
     "tap-spec": "^4.1.1",
-    "tape": "^4.8.0"
+    "tape": "^4.8.0",
+    "@google-cloud/nodejs-repo-tools": "1.4.17"
   },
   "dependencies": {
     "eslint-config-airbnb": "^16.1.0",
     "request": "^2.83.0"
+  },
+  "engines": {
+    "node": ">=4.3.2"
   }
 }
